--- a/A-8/A-8.1.html
+++ b/A-8/A-8.1.html
@@ -1,38 +1,65 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Barra de Navegação</title>
+    <title>Navegação</title>
     <link rel="stylesheet" href="Projeto 02/A-8.1.css">
 </head>
 <body>
 
-    <h1>Aula sobre barras de navegação</h1>
-    <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Noticias</a></li>
-        <li><a href="#">Sobre</a></li>
-        <li><a href="#">Contato</a></li>
-    </ul>
-    
-    <div id="modelo01">
-        <h2>Modelo 01</h2>
-        <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Noticias</a></li>
-            <li><a href="#">Sobre</a></li>
-            <li><a href="#">Contato</a></li>
-        </ul>
+    <div class="center">
+        <div class="container0"><br><br>
+        <h2 class="title">Modelo 01</h2><br>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Noticias</a></li>
+                <li><a href="#">Sobre</a></li>
+                <li><a href="#">Contato</a></li>
+            </ul>
+        </div>
 
-    <div id="modelo02">
-        <h2>Modelo 01</h2>
-        <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Noticias</a></li>
-            <li><a href="#">Sobre</a></li>
-            <li><a href="#">Contato</a></li>
-        </ul>
+        <div class="container1"><br><br>
+        <h2 class="title">Modelo 02</h2><br>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Noticias</a></li>
+                <li><a href="#">Sobre</a></li>
+                <li><a href="#">Contato</a></li>
+            </ul>
+        </div>
+
+        <div class="container2"><br><br>
+            <h2 class="title">Modelo 03</h2><br>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Noticias</a></li>
+                    <li><a href="#">Sobre</a></li>
+                    <li><a href="#">Contato</a></li>
+                </ul>
+        </div>
+
+        <div class="container3"><br><br>
+            <h2 class="title">Modelo 04</h2><br>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Noticias</a></li>
+                    <li><a href="#">Sobre</a></li>
+                    <li><a href="#">Contato</a></li>
+                </ul>
+        </div>
+
+        <div class="container4"><br><br>
+            <h2 class="title">Design do Aluno</h2><br>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Noticias</a></li>
+                    <li><a href="#">Sobre</a></li>
+                    <li><a href="#">Contato</a></li>
+                </ul>
+        </div>
+
+    </div>
 
 </body>
 </html>
