--- a/A-12/A-12.3.html
+++ b/A-12/A-12.3.html
@@ -10,24 +10,26 @@
         let idade = parseFloat(prompt('Digite Sua Idade'));
 
         if (idade <= 12) {
-            console.log('Menor de Idade')
+            console.log('Criança')
             document.write('Criança')
         }
 
         else if (idade <= 17) {
-            console.log('Menor de Idade')
+            console.log('Adolescente')
             document.write('Adolescente')
         }
 
+        else if (idade >= 65) {
+            console.log('Idoso')
+            document.write('Idoso')
+        }
+
         else if (idade >= 18) {
-            console.log('Maior de Idade')
+            console.log('Adulto')
             document.write('Adulto')
         }
 
-        else if (idade >= 65) {
-            console.log('Maior de Idade')
-            document.write('Idoso')
-        }
+        
 
         
     </script>
