--- a/A-14/A-14.1.html
+++ b/A-14/A-14.1.html
@@ -19,52 +19,67 @@
             <div class="atividade"><br>
                 <h1>Atividade 01</h1>
                 <p>Crie um programa que receba o nome, sobrenome e o e-mail do usuário. Imprima todos os dados no console, Conforme Abaixo:</p>
-                <a href="a">Clique Aqui</a>
+                <a href="../A-9/Variavel/A-9.1.html">Clique Aqui</a>
                 <hr><br>
 
                 <h1>Atividade 02</h1>
                 <p>Crie uma variável que comece guardando o a cor, azul, depois troque para amarelo, depois troque para vermelho depois troque para verde Imprima na página, Conforme Abaixo:</p>
-                <a href="a">Clique Aqui</a>
+                <a href="../A-9/Variavel/A-9.2.html">Clique Aqui</a>
                 <hr><br>
 
                 <h1>Atividade 03</h1>
                 <p>Crie um programa que receba dois números e realize a soma, subtração, multiplicação e divisão.Imprima na página, Conforme Abaixo:</p>
-                <a href="a">Clique Aqui</a>
+                <a href="../A-10/Operadores/A-10.1.html">Clique Aqui</a>
                 <hr><br>
 
                 <h1>Atividade 04</h1>
                 <p>Crie um programa que receba o nome do aluno, uma nota para Português, uma nota para Matemática e uma nota para Ciências, calcule a média entre as notas eimprima na página, Conforme Abaixo:</p>
-                <a href="a">Clique Aqui</a>
+                <a href="../A-10/Operadores/A-10.2.html">Clique Aqui</a>
                 <hr><br>
 
                 <h1>Atividade 05</h1>
                 <p>Crie um programa que receba o nome do funcionário e seu salário mensal, dê um aumento de 25% para esse funcionário e imprima na página, Conforme Abaixo:</p>
-                <a href="a">Clique Aqui</a>
+                <a href="../A-10/Operadores/A-10.3.html">Clique Aqui</a>
                 <hr><br>
 
                 <h1>Atividade 06</h1>
                 <p>Crie um programa que solicite um número inteiro ao usuário, use if e else paraverificar se o número é par ou ímpar. Conforme Abaixo:</p>
-                <a href="a">Clique Aqui</a>
+                <a href="../A-12/A-12.0.html">Clique Aqui</a>
                 <hr><br>
 
                 <h1>Atividade 07</h1>
-                <p>Crie um programa que solicite um número entre 1 a 12 ao usuário, e exiba uma napágina qual mês corresponde o número, use a condicional switch. Observação, se o usuário digitar 12 deve aparecer também uma imagem do papaiNoel na página. Conforme Abaixo:</p>
-                <a href="a">Clique Aqui</a>
+                <p>Crie um programa que solicite um número entre 1 a 12 ao usuário, e exiba uma na página qual mês corresponde o número, use a condicional switch. Observação, se o usuário digitar 12 deve aparecer também uma imagem do papaiNoel na página. Conforme Abaixo:</p>
+                <a href="../A-12/A-12.1.html">Clique Aqui</a>
                 <hr><br>
 
                 <h1>Atividade 08</h1>
-                <p>Crie um programa que solicite ao usuário dois números inteiros e a operaçãodesejada, no final exibir os números digitados e o cálculo de acordo com aoperação. Conforme Abaixo:</p>
-                <a href="a">Clique Aqui</a>
+                <p>Crie um programa que solicite ao usuário dois números inteiros e a operação desejada, no final exibir os números digitados e o cálculo de acordo com aoperação. Conforme Abaixo:</p>
+                <a href="../A-12/A-12.2.html">Clique Aqui</a>
                 <hr><br>
 
                 <h1>Atividade 09</h1>
                 <p>Crie um programa que solicite a idade de uma pessoa e classifique-a como"Criança", "Adolescente", "Adulto", ou "Idoso" usando if, else if, e else. Critérios: Idade menor que 12 criança, menor que 18 adolescente, maior ou igual a 18 adulto. Conforme Abaixo:</p>
-                <a href="a">Clique Aqui</a>
+                <a href="../A-12/A-12.3.html">Clique Aqui</a>
                 <hr><br>
 
                 <h1>Atividade 10</h1>
                 <p>A padaria do Sr. Joaquim está com uma promoção, cada pãozinho custa R$ 1,00.Se o cliente comprar acima de 15 pães cada um terá o custo de R$ 0,80, Crie um programa que solicite ao usuário informar quantos pães ele deseja, imprima na página a quantidade de pães, o valor de cada pão, se entrou napromoção da padaria e qual valor a pagar. Conforme Abaixo:</p>
-                <a href="a">Clique Aqui</a>
+                <a href="../A-14/A-14.0.html">Clique Aqui</a>
+                <hr><br>
+
+                <h1>Atividade 11</h1>
+                <p>Crie um quiz com pelo menos 5 perguntas, cada uma com 4 alternativas. Solicite ao usuário que escolha uma alternativa para cada pergunta. Após responder, exiba um resumo que inclua a alternativa correta, a escolha do usuário para cada pergunta e o total de acertos:</p>
+                <a href="../A-14/A-14.2.html">Clique Aqui</a>
+                <hr><br>
+
+                <h1>Atividade 12</h1>
+                <p>Criar um programa em JavaScript que solicite ao usuário um número entre 1 e 10, valide se o número está dentro do intervalo permitido e, em seguida, gere e exiba a tabuada de multiplicação correspondente a esse número:</p>
+                <a href="../A-13/Repetição/A-13.5.html">Clique Aqui</a>
+                <hr><br>
+
+                <h1>Atividade 13</h1>
+                <p>Crie um programa em JavaScript que, crie um elemento de imagem, depois defina o tamanho da imagem como 100 pixels de largura e 100 pixels de altura e exiba essa imagem na tela 1000 vezes.</p>
+                <a href="../A-15/A-15.2.html">Clique Aqui</a>
                 <hr><br>
 
             </div>
