--- a/A-15/A-15.3.html
+++ b/A-15/A-15.3.html
@@ -23,10 +23,13 @@
             background-color: black;
             height: 100px;
             width: 200px;
+            padding: 10px;
         }
 
         .cor3 {
             background-color: black;
+            padding: 10px;
+            
             height: 100px;
             width: 200px;
         }
