--- a/A-15/A-15.3.html
+++ b/A-15/A-15.3.html
@@ -12,6 +12,7 @@
         }
 
         .cor1 {
+            display: block;
             background-color: aqua;
             height: 600px;
             width: 600px;
@@ -23,15 +24,6 @@
             background-color: black;
             height: 100px;
             width: 200px;
-            padding: 10px;
-        }
-
-        .cor3 {
-            background-color: black;
-            padding: 10px;
-            
-            height: 100px;
-            width: 200px;
         }
 
     </style>
@@ -40,9 +32,8 @@
 
     <div class="cor1">
         <div class="cor2">
-            <div class="cor3">
+            <div class="cor2"></div>
                 
-            </div>
         </div>
     </div>
 
