--- a/A-21/A-21.3.html
+++ b/A-21/A-21.3.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Relógio 3</title>
-    <link rel="stylesheet" href="../A-21/A-21.3.css">
+    <link rel="stylesheet" href="../A-21/A-21.0.css">
 </head>
 
 <body>
@@ -16,15 +16,15 @@
                 <h1 id="data"></h1>
             </div>
             <div id="display-container">
-                <div id="display">
+                <div id="display3">
                     <div id="horas"></div>
                 </div>
                 <p>:</p>
-                <div id="display">
+                <div id="display3">
                     <div id="minutos"></div>
                 </div>
                 <p>:</p>
-                <div id="display">
+                <div id="display3">
                     <div id="segundos"></div>
                 </div>
             </div>
