--- a/A-14/A-14.1.html
+++ b/A-14/A-14.1.html
@@ -82,10 +82,80 @@
                 <a href="../A-15/A-15.2.html">Clique Aqui</a>
                 <hr><br>
 
-                
-                <h1>Atividade 13</h1>
-                <p>AA</p>
+                <h1>Atividade 14</h1>
+                <p>Crie um programa em JavaScript que: Solicite ao usuário que digite o nome de uma fruta. Após o usuário digitar o nome, o programa deve: o Exibir o nome da fruta em português e em inglês. o Mostrar uma imagem correspondente à fruta.</p>
                 <a href="../A-15/A-15.3.html">Clique Aqui</a>
+                <hr><br>
+
+                <h1>Atividade 15</h1>
+                <p>Crie um programa em JavaScript que: Armazene um número fixo entre 1 e 10 (escolhido por você).</p>
+                <a href="../A-23/A-23.2.html">Clique Aqui</a>
+                <hr><br>
+
+                <h1>Atividade 16</h1>
+                <p>Crie uma variável para a armazenar o nome, email e telefone.</p>
+                <a href="../A-15/A-15.5.html">Clique Aqui</a>
+                <hr><br>
+
+                <h1>Atividade 17</h1>
+                <p>Imprimir Mensagens - Função com parâmetro.</p>
+                <a href="../A-16/Funcoes/A-16.1.html">Clique Aqui</a>
+                <hr><br>
+
+                <h1>Atividade 18</h1>
+                <p>Calcular o Dobro de um Número - Função com retorno.</p>
+                <a href="../A-16/Funcoes/A-16.3.html">Clique Aqui</a>
+                <hr><br>
+
+                <h1>Atividade 19</h1>
+                <p>Verificar se o número é Ímpar ou Par.</p>
+                <a href="../A-16/Funcoes/A-16.5.html">Clique Aqui</a>
+                <hr><br>
+
+                <h1>Atividade 20</h1>
+                <p>Usando funções nativas, imprima no console e na página a data de acordo com o sistema operacional.</p>
+                <a href="../A-17/A-17.1.html">Clique Aqui</a>
+                <hr><br>
+
+                <h1>Atividade 21</h1>
+                <p>Usando funções nativas, imprima no console e na página a data de acordo com o sistema operacional, com data completa.</p>
+                <a href="../A-17/A-17.2.html">Clique Aqui</a>
+                <hr><br>
+
+                <h1>Atividade 22</h1>
+                <p>Simulação de lâmpada acendendo e apagando ao clicar.</p>
+                <a href="../A-18/A-18.10.html">Clique Aqui</a>
+                <hr><br>
+
+                <h1>Atividade 23</h1>
+                <p>Desenvolva um programa que permita ao Usuário alterar a cor do elemento da página.</p>
+                <a href="../A-19/A-19.0.html">Clique Aqui</a>
+                <hr><br>
+
+                <h1>Atividade 24</h1>
+                <p>Manipulação de eventos de mouse: utilize diversos eventos de mouse para criar interações dinâmicas</p>
+                <a href="../A-23/A-23.0.html">Clique Aqui</a>
+                <hr><br>
+
+                <h1>Atividade 25</h1>
+                <p>Manipulação de eventos de Teclado: demonstrando o uso de diferentes eventos de teclado.</p>
+                <a href="../A-23/A-23.1.html">Clique Aqui</a>
+                <hr><br>
+
+                <h1>Atividade 26</h1>
+                <p>Crie uma variável para a armazenar o nome, email e telefone. e imprima na impressora:</p>
+                <a href="../A-20/A-20.4.html">Clique Aqui</a>
+                <hr><br>
+
+                <h1>Atividade 27</h1>
+                <p>Utilizando HTML, CSS, JS, crie os relógios abaixo:</p>
+                <a href="../A-21/A-21.5.html">Clique Aqui</a>
+                <hr><br>
+
+                <h1>Atividade 28</h1>
+                <p>Crie os formulários abaixo utilizando HTML e CSS, realize a validação dos campos usando Javascript</p>
+                <a href="../A-22/A-22.0.html">Clique Aqui</a>
+                <a href="../A-22/A-22.1.html">Clique Aqui</a>
                 <hr><br>
 
             </div>
