--- a/A-22/A-22.1.html
+++ b/A-22/A-22.1.html
@@ -4,35 +4,139 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="A-22.0.css">
+    <title>Login</title>
+    <style>
+        /* Definições gerais de estilo */
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f0f0f0;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+        }
+
+        .container {
+            text-align: center;
+        }
+
+        h1 {
+            font-size: 24px;
+            margin-bottom: 20px;
+        }
+
+        .login-container {
+            background-color: #fff;
+            border: 1px solid #ddd;
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            padding: 20px;
+            width: 350px;
+            height: 300px;
+            text-align: center;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            margin: auto;
+        }
+
+        .field {
+            margin-bottom: 15px;
+            text-align: left;
+        }
+
+        label {
+            display: block;
+            margin-bottom: 5px;
+            font-weight: bold;
+        }
+
+        input[type="text"],
+        input[type="password"] {
+            width: calc(100% - 22px);
+            padding: 10px;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            box-sizing: border-box;
+        }
+
+        .login-button {
+            background-color: green;
+            color: #fff;
+            border: none;
+            padding: 10px 20px;
+            border-radius: 4px;
+            cursor: pointer;
+            font-size: 16px;
+            margin-bottom: 10px;
+        }
+
+        .login-button:hover {
+            background-color: darkgreen;
+        }
+
+        .img {
+            height: 100px;
+            width: 100px;
+            border-radius: 50%;
+            margin-bottom: 20px;
+        }
+
+        input[type="checkbox"] {
+            margin-right: 10px;
+        }
+
+        .additional-links {
+            margin-top: 15px;
+        }
+
+        .additional-links a {
+            color: #007bff;
+            text-decoration: none;
+            font-size: 14px;
+            margin: 0 5px;
+        }
+
+        .additional-links a:hover {
+            text-decoration: underline;
+        }
+    </style>
 </head>
 
 <body>
-    <form>
-        <div class="borda1">
-            <div>
-                <h1>Formulário de Login</h1>
-            <div>
-                <img class="foto" src="../Imagens/BOB.jpeg" alt="">
+    <div class="container">
+        <h1>Formulário de Login</h1>
+        <form>
+            <div class="login-container">
+                <div>
+                    <img src="../Imagens/BOB.jpeg" alt="foto" class="img">
+                </div>
+                <div class="field">
+                    <label for="usuario">Usuário</label>
+                    <input type="text" id="usuario" name="usuario" required>
+                </div>
+                <div class="field">
+                    <label for="senha">Senha</label>
+                    <input type="password" id="senha" name="senha" required>
+                </div>
+                <div>
+                    <button type="submit" class="login-button">Login</button>
+                </div>
+                <div>
+                    <label>
+                        <input type="checkbox" name="salva">
+                        Salvar dados
+                    </label>
+                </div>
+                <div class="additional-links">
+                    <a href="#">Cancelar</a> |
+                    <a href="#">Esqueceu a senha?</a>
+                </div>
             </div>
-            <div>
-                <label for="nome">Usuário</label>
-                <input type="nome" id="usuario">
-            </div>
-            <div>
-                <label for="senha">Senha</label>
-                <input type="senha" id="senhaUsuario">
-            </div>
-            <div>
-                <button class="login">Login</button>
-            </div>
-            <div>
-                <input type="checkbox" name="salva">
-                <label for="salvar">Salvar dados</label>
-            </div>
-        </div>
-    </form>
+        </form>
+    </div>
 </body>
 
 </html>
