--- a/A-22/A-22.0.html
+++ b/A-22/A-22.0.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro</title>
+    <script src="../A-22/A-22.0.js"></script>
     <style>
         body {
             margin: 0;
@@ -78,23 +79,26 @@
 <body>
     <div class="borda">
         <h1>Cadastro</h1>
-        <form>
+        <form onsubmit="return validarFormulario()">
             <div class="field">
                 <label for="nome">Nome:</label>
-                <input type="text" id="nome" name="nome" required>
+                <input type="text" id="nome" name="nome">
             </div>
             <div class="field">
                 <label for="email">E-mail:</label>
-                <input type="email" id="email" name="email" required>
+                <input type="email" id="email" name="email">
             </div>
             <div class="field">
                 <label for="senha">Senha:</label>
-                <input type="password" id="senha" name="senha" required>
+                <input type="password" id="senha" name="senha">
             </div>
             <div>
                 <button type="submit" class="cadastrar">Cadastrar</button>
             </div>
         </form>
+
+        <div id="mensagemErro"></div>
+
     </div>
 </body>
 
