--- a/A-12/A-12.1.html
+++ b/A-12/A-12.1.html
@@ -17,36 +17,47 @@
         switch (meses) {
             case '1':
                 console.log('Janeiro');
+                document.write('Janeiro')
             break;
             case '2':
                 console.log('Fevereiro');
+                document.write('Fevereiro')
             break;
             case '3':
                 console.log('Março');
+                document.write('Março')
             break;
             case '4':
                 console.log('Abril');
+                document.write('Abril')
             break;
             case '5':
                 console.log('Maio');
+                document.write('Maio')
             break;
             case '6':
                 console.log('Junho');
+                document.write('Junho')
             break;
             case '7':
                 console.log('Julho');
+                document.write('Julho')
             break;
             case '8':
                 console.log('Agosto');
+                document.write('Agosto')
             break;
             case '9':
                 console.log('Setembro');
+                document.write('Setembro')
             break;
             case '10':
                 console.log('Outubro');
+                document.write('Outubro')
             break;
             case '11':
                 console.log('Novembro');
+                document.write('Novembro')
             break;
             case '12':
                 console.log('Dezembro');
