--- a/A-16/Funcoes/A-16.1.html
+++ b/A-16/Funcoes/A-16.1.html
@@ -8,4 +8,5 @@
     
     let usuario = prompt('Digite uma mensagem');
     imprimirMensagem(usuario)
+    document.write('Aula de JavaScript<br>' + 'Curso Técnico em Informática<br>' + usuario)
 </script>
